--- a/Containers/Dockerfile
+++ b/Containers/Dockerfile
@@ -14,4 +14,4 @@ COPY .. .
 
 RUN useradd appuser && chown -R appuser /app
 USER appuser
-CMD exec gunicorn -b :8088 --workers 1 --threads 8 --timeout 0 app:app
+CMD exec ddtrace-run gunicorn -b :8088 --workers 1 --threads 8 --timeout 0 app:app
