--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -15,3 +15,17 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install-requirements
         run: pip install -r requirements.txt
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get-Source
+        uses: actions/checkout@v3
+      - name: Install-Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          cache: 'pip'
+      - name: Upgrade-pip
+        run: python -m pip install --upgrade pip
+      - name: Install-requirements
+        run: pip install -r requirements.txt
