--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -16,16 +16,22 @@ jobs:
       - name: Install-requirements
         run: pip install -r requirements.txt
   deploy:
+    needs: run-tests
     runs-on: ubuntu-latest
     steps:
       - name: Get-Source
         uses: actions/checkout@v3
-      - name: Install-Python
-        uses: actions/setup-python@v4
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          python-version: '3.9'
-          cache: 'pip'
-      - name: Upgrade-pip
-        run: python -m pip install --upgrade pip
-      - name: Install-requirements
-        run: pip install -r requirements.txt
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Build and Push
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          file: ./Containers/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/datadogcurryware:0.2.${{ github.run_number }},${{ secrets.DOCKER_USERNAME }}/datadogcurryware:latest
