--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -26,6 +26,8 @@ jobs:
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       - name: Build and Push
@@ -33,5 +35,6 @@ jobs:
         with:
           context: .
           file: ./Containers/Dockerfile
+          platforms: linux/arm64/v8,linux/amd64
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/datadogcurryware:0.2.${{ github.run_number }},${{ secrets.DOCKER_USERNAME }}/datadogcurryware:latest
