--- a/Containers/Dockerfile
+++ b/Containers/Dockerfile
@@ -10,7 +10,7 @@ WORKDIR /app
 COPY ../requirements.txt requirements.txt
 RUN python -m pip install --upgrade pip
 RUN pip3 install -r requirements.txt
-COPY .. .
+COPY ../.. .
 
 RUN useradd appuser && chown -R appuser /app
 USER appuser
