Working on Lambda function and changes Github Action

--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -1,5 +1,8 @@
 name: Datadog Curryware Build
-on: workflow_dispatch
+on:
+  push:
+    branches:
+      - 'master'
 jobs:
   run-tests:
     runs-on: ubuntu-latest
