--- a/Containers/datadogcurryware-service.yaml
+++ b/Containers/datadogcurryware-service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: datadogcurryware-service
 spec:
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: datadogcurryware
   ports:
