--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 Flask==2.2.2
-datadog_api_client==2.6.0
-ddtrace==1.6.3
+datadog_api_client==2.8.0
+ddtrace==1.7.3
 gunicorn==20.1.0
 pip==22.3.1
-requests==2.28.1
-setuptools==65.6.3
+python-json-logger==2.0.4
+requests==2.28.2
+setuptools==67.0.0
 wheel==0.38.4
