--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Flask==2.2.2
-datadog_api_client==2.8.0
-ddtrace==1.7.3
+datadog_api_client==2.9.0
+ddtrace==1.7.5
 gunicorn==20.1.0
-pip==22.3.1
-python-json-logger==2.0.4
+pip==23.0
+pytest==7.2.1
+python-json-logger==2.0.6
 requests==2.28.2
-setuptools==67.0.0
+setuptools==67.3.1
 wheel==0.38.4
