--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -18,14 +18,11 @@ jobs:
         run: python -m pip install --upgrade pip
       - name: Install-requirements
         run: pip install -r requirements.txt
-  test:
-    steps:
       - name: Datadog Agent
-        uses: DataDog/agent-github-action@v1
+        uses: Datadog/agent-github-action@v1
         with:
           api_key: ${{ secret.DD_API_KEY }}
-        run: |
-          DD_ENV=ci DD_SERVICE=chuckjoke-frontend pytest ./unittests/* --ddtrace
+        run: DD_ENV=ci DD_SERVICE=chuckjoke-frontend pytest ./unittests/* --ddtrace
   deploy:
     needs: run-tests
     runs-on: ubuntu-latest
