--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -22,7 +22,7 @@ jobs:
         uses: Datadog/agent-github-action@v1
         with:
           api_key: ${{ secret.DD_API_KEY }}
-        run: DD_ENV=ci DD_SERVICE=chuckjoke-frontend pytest ./unittests/* --ddtrace
+      - run: DD_ENV=ci DD_SERVICE=chuckjoke-frontend pytest ./unittests/* --ddtrace
   deploy:
     needs: run-tests
     runs-on: ubuntu-latest
