--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -22,6 +22,9 @@ jobs:
         uses: Datadog/agent-github-action@v1
         with:
           api_key: ${{ secrets.DD_API_KEY }}
+        env:
+          DD_API_KEY: ${{ secrets.DD_API_KEY }}
+          DD_APPLICATION_KEY: ${{ secrets.DD_APPLICATION_KEY }}
       - run: DD_ENV=ci DD_SERVICE=chuckjoke-frontend pytest ./unittests/* --ddtrace
   deploy:
     needs: run-tests
