--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           DD_API_KEY: ${{ secrets.DD_API_KEY }}
           DD_APPLICATION_KEY: ${{ secrets.DD_APPLICATION_KEY }}
-      - run: DD_ENV=ci DD_SERVICE=chuckjoke-frontend pytest ./unittests/* --ddtrace
+      - run: DD_ENV=ci DD_API_KEY=${{ secrets.DD_API_KEY }} DD_APPLICATION_KEY=${{ DD_APPLICATION_KEY }} DD_SERVICE=chuckjoke-frontend pytest ./unittests/* --ddtrace
   deploy:
     needs: run-tests
     runs-on: ubuntu-latest
