--- a/.github/workflows/build-action.yml
+++ b/.github/workflows/build-action.yml
@@ -48,4 +48,4 @@ jobs:
           file: ./Containers/Dockerfile
           platforms: linux/arm64/v8,linux/amd64
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/datadogcurryware:3.7.1184,{{ github.run_number }},${{ secrets.DOCKER_USERNAME }}/datadogcurryware:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/datadogcurryware:3.7.1184,${{ secrets.DOCKER_USERNAME }}/datadogcurryware:latest
