--- a/Containers/docker-compose.yaml
+++ b/Containers/docker-compose.yaml
@@ -7,11 +7,11 @@ services:
       - "8088:8088"
     #  There is a way to ingest labels and make the tags.  Need to look into this.
     labels:
-      com.datadoghq.tags.build: '3.703.822'
+      com.datadoghq.tags.build: '3.704.1123'
       # Unified Tagging items
       com.datadoghq.tags.env: 'staging'
       com.datadoghq.tags.service: 'chuckjoke-frontend'
-      com.curryware.tags.version: '3.703.828'
+      com.datadoghq.tags.version: '3.704.1123'
       com.datadoghq.tags.labeltag: 'added-label-tag'
       # This line is what will add the source tag.  That tag is used to make sure the right log pipeline is used.
       # Need to research this to figure out which takes precedent (env or labels).
@@ -20,7 +20,7 @@ services:
       org.opencontainers.image.source: 'https://github.com/scotcurry/Datadog'
     environment:
       - DD_ENV=prod
-      - DD_VERSION=3.703.939.865.828.822
+      - DD_VERSION=3.704.780
       - DD_SERVICE=chuckjoke-frontend
       - DD_LOGS_INJECTION=true
       - DD_TRACE_SAMPLE_RATE=1
