--- a/Containers/docker-compose.yaml
+++ b/Containers/docker-compose.yaml
@@ -7,18 +7,26 @@ services:
       - "8088:8088"
     #  There is a way to ingest labels and make the tags.  Need to look into this.
     labels:
-      com.datadoghq.tags.build: '3.711.703'
+      com.datadoghq.tags.build: '3.718.600'
       # Unified Tagging items
       com.datadoghq.tags.env: 'staging'
       com.datadoghq.tags.service: 'chuckjoke-frontend'
-      com.datadoghq.tags.version: '3.711.703'
+      com.datadoghq.tags.version: '3.718.600'
       com.datadoghq.tags.labeltag: 'added-label-tag'
       # This line is what will add the source tag.  That tag is used to make sure the right log pipeline is used.
       # Need to research this to figure out which takes precedent (env or labels).
-      com.datadoghq.ad.logs: '[{"source": "python", "service": "chuckjoke-frontend"}]'
+      com.datadoghq.ad.logs: '[{
+        "source": "python", 
+        "service": "chuckjoke-frontend",
+        "log_processing_rules": [{
+          "type": "multi_line",
+          "name", "log_start_with_date_time",
+          "pattern": "\d{4}-\d{2}-\d{2}\s\d{2}:\d{2}:\d{2},\d{3}"
+        }]
+      }]'
     environment:
       - DD_ENV=prod
-      - DD_VERSION=3.704.780
+      - DD_VERSION=3.718.600
       - DD_SERVICE=chuckjoke-frontend
       - DD_LOGS_INJECTION=true
       - DD_TRACE_SAMPLE_RATE=1
