--- a/Containers/docker-compose.yaml
+++ b/Containers/docker-compose.yaml
@@ -7,12 +7,14 @@ services:
       - "8088:8088"
     #  There is a way to ingest labels and make the tags.  Need to look into this.
     labels:
-      com.datadoghq.tags.build: '3.719.786'
+      com.datadoghq.tags.build: '3.726.546'
       # Unified Tagging items
       com.datadoghq.tags.env: 'prod'
       com.datadoghq.tags.service: 'chuckjoke-frontend'
-      com.datadoghq.tags.version: '3.719.786'
+      com.datadoghq.tags.version: '3.726.546'
       com.datadoghq.tags.labeltag: 'added-label-tag'
+      org.opencontainers.image.revision: '818aafb6ea33ecbf264359d2984c59e7925778f4'
+      org.opencontainers.image.source: 'github.com/scotcurry/Datadog'
       # This line is what will add the source tag.  That tag is used to make sure the right log pipeline is used.
       # Need to research this to figure out which takes precedent (env or labels).
       com.datadoghq.ad.logs: >- 
@@ -27,7 +29,7 @@ services:
         }]
     environment:
       - DD_ENV=prod
-      - DD_VERSION=3.719.786
+      - DD_VERSION=3.726.546
       - DD_SERVICE=chuckjoke-frontend
       - DD_LOGS_INJECTION=true
       - DD_TRACE_SAMPLE_RATE=1
