Back to working with this repository

--- a/Containers/docker-compose-template.yaml
+++ b/Containers/docker-compose-template.yaml
@@ -7,14 +7,11 @@ services:
       - "8088:8088"
     #  There is a way to ingest labels and make the tags.  Need to look into this.
     labels:
-      com.datadoghq.tags.build: '3.726.760'
+      com.datadoghq.tags.build: '<DATADOG_VERSION>'
       # Unified Tagging items
       com.datadoghq.tags.env: 'prod'
       com.datadoghq.tags.service: 'chuckjoke-frontend'
-      com.datadoghq.tags.version: '3.726.760'
-      com.datadoghq.tags.labeltag: 'added-label-tag'
-      org.opencontainers.image.revision: '818aafb6ea33ecbf264359d2984c59e7925778f4'
-      org.opencontainers.image.source: 'github.com/scotcurry/Datadog'
+      com.datadoghq.tags.version: '<DATADOG_VERSION>'
       # This line is what will add the source tag.  That tag is used to make sure the right log pipeline is used.
       # Need to research this to figure out which takes precedent (env or labels).
       com.datadoghq.ad.logs: >- 
@@ -29,24 +26,23 @@ services:
         }]
     environment:
       - DD_ENV=prod
-      - DD_VERSION=3.726.760
+      - DD_VERSION=<DATADOG_VERSION>
       - DD_SERVICE=chuckjoke-frontend
       - DD_LOGS_INJECTION=true
       - DD_TRACE_SAMPLE_RATE=1
       - DD_AGENT_HOST=datadog-agent
       - RUN_LOCAL=false
-      - DD_GIT_COMMIT_SHA=818aafb6ea33ecbf264359d2984c59e7925778f4
+      - DD_GIT_COMMIT_SHA=<GIT_SHA>
       - DD_GIT_REPOSITORY_URL=github.com/scotcurry/Datadog
   agent:
     image: "datadog/agent:latest"
     container_name: datadog-agent
     environment:
-      - DD_API_KEY=${DD_API_KEY}
+      - DD_API_KEY=<DD_API_KEY>
       - DD_APM_ENABLED=true
       - DD_LOGS_ENABLED=true
       - DD_APM_NON_LOCAL_TRAFFIC=true
       - DD_LOGS_CONFIG_CONTAINER_COLLECT_ALL=true
-      - DD_DOCKER_LABELS_AS_TAGS={"my.custom.label.team":"team"}
       - DD_HOSTNAME=docker-agent
       - DD_REMOTE_CONFIGURATION_ENABLED=true
       - DD_INVENTORIES_CONFIGURATION_ENABLED=true
